<resources>
    <string name="app_name">Popular Movies App</string>
    <string name="release_date">Release Date</string>
    <string name="average_rating">Average Rating</string>
    <string name="overview">Plot</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="sort_by">Sort By</string>
    <string name="popular">Most Popular</string>
    <string name="highest_rated">Highest Rated</string>
    <string name="next_page">Next Page</string>
    <string name="previous_page">Previous Page</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="favorites">Favorite list</string>
    <string name="title_activity_settings">Settings</string>

    <string name="rating_out_of">/10</string>

    <string name="sort_by_key" translatable="false">sort_by_key</string>
    <string name="pref_top_rated" translatable="false">pref_top_rated</string>
    <string name="pref_popular" translatable="false">pref_popular</string>
    <string name="pref_fav" translatable="false">pref_fav</string>
</resources>
