<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/most_popular"
        android:title="@string/popular"
        app:showAsAction="never"
        android:orderInCategory="1"/>
    <item
        android:id="@+id/highest_rated"
        android:title="@string/highest_rated"
        app:showAsAction="never"
        android:orderInCategory="2"/>
    <item
        android:id="@+id/favorites"
        android:title="@string/favorites"
        app:showAsAction="never"
        android:orderInCategory="3"/>
    <group
        android:orderInCategory="4"
        >
        <item
            android:id="@+id/next_page"
            android:title="@string/next_page"/>
        <item
            android:id="@+id/previous_page"
            android:title="@string/previous_page"/>
    </group>
</menu>